tests/__snapshots__/api-toBeBigInt.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeBigInt: stderr 1`] = `
"Error: Type 'bigint' is not identical to type 'void'.

  12 |   expect(returnsBigInt()).type.toBeBigInt();
  13 | 
> 14 |   expect(returnsVoid()).type.toBeBigInt();
     |                              ^
  15 | });
  16 | 
  17 | test("is NOT bigint?", () => {

       at ./__typetests__/toBeBigInt.test.ts:14:30 ❭ is bigint?

Error: Type 'bigint' is identical to type 'bigint'.

  18 |   expect(returnsVoid()).type.not.toBeBigInt();
  19 | 
> 20 |   expect(returnsBigInt()).type.not.toBeBigInt();
     |                                    ^
  21 | });
  22 | 

       at ./__typetests__/toBeBigInt.test.ts:20:36 ❭ is NOT bigint?

"
`;

exports[`toBeBigInt: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeBigInt.test.ts
  × is bigint?
  × is NOT bigint?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
